--- a/packages/camera/camera/example/pubspec.yaml
+++ b/packages/camera/camera/example/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
     path: ../
+  camera_avfoundation:
+    path: ../../camera_avfoundation
+  camera_platform_interface: ^2.12.0
   flutter:
     sdk: flutter
   path_provider: ^2.0.0
@@ -28,6 +31,10 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   leak_tracker_flutter_testing: any
+
+dependency_overrides:
+  camera_avfoundation:
+    path: ../../camera_avfoundation
 
 flutter:
   uses-material-design: true
