--- a/packages/camera/camera_platform_interface/pubspec.yaml
+++ b/packages/camera/camera_platform_interface/pubspec.yaml
@@ -7,7 +7,7 @@ issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+
 version: 2.12.0
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.3.0 <5.0.0"
   flutter: ">=3.32.0"
 
 dependencies:
