--- a/packages/camera/camera_windows/pubspec.yaml
+++ b/packages/camera/camera_windows/pubspec.yaml
@@ -5,7 +5,7 @@ issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+
 version: 0.2.6+4
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.3.0 <5.0.0"
   flutter: ">=3.32.0"
 
 flutter:
