--- a/packages/camera/camera_android/pubspec.yaml
+++ b/packages/camera/camera_android/pubspec.yaml
@@ -1,38 +1,39 @@
-name: camera_android
-description: Android implementation of the camera plugin.
-repository: https://github.com/flutter/packages/tree/main/packages/camera/camera_android
+name: camera_android_camerax
+description: Android implementation of the camera plugin using the CameraX library.
+repository: https://github.com/flutter/packages/tree/main/packages/camera/camera_android_camerax
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+camera%22
-
-version: 0.10.10+14
+version: 0.6.13
 
 environment:
-  sdk: ">=3.3.0 <5.0.0"
-  flutter: ">=3.29.0"
+  sdk: ^3.6.0
+  flutter: ">=3.27.0"
 
 flutter:
   plugin:
     implements: camera
     platforms:
       android:
-        package: io.flutter.plugins.camera
-        pluginClass: CameraPlugin
-        dartPluginClass: AndroidCamera
+        package: io.flutter.plugins.camerax
+        pluginClass: CameraAndroidCameraxPlugin
+        dartPluginClass: AndroidCameraCameraX
 
 dependencies:
+  async: ^2.5.0
   camera_platform_interface: ^2.9.0
   flutter:
     sdk: flutter
-  flutter_plugin_android_lifecycle: ^2.0.2
-  stream_transform: ^2.0.0
+  meta: ^1.7.0
+  stream_transform: ^2.1.0
 
 dev_dependencies:
-  async: ^2.5.0
-  build_runner: ^2.4.11
+  build_runner: ^2.2.0
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
   leak_tracker_flutter_testing: any
   mockito: ^5.4.4
-  pigeon: ^26.1.0
+  pigeon: ^9.1.0
 
 topics:
   - camera
