fix: downgrade flutter sdk

--- a/packages/camera/camera/pubspec.yaml
+++ b/packages/camera/camera/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   camera_platform_interface:
     path: ../camera_platform_interface
   camera_web:
-    path: ../camera_web`
+    path: ../camera_web
   flutter:
     sdk: flutter
   flutter_plugin_android_lifecycle: ^2.0.2
